# wireguard-builder

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.org  docker-compose.yml  openapi.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-image.yml  lint.yml  rust.yml  rust_clippy.yml
.openapi-generator/: FILES
api/: Dockerfile  setup.py
api/.openapi-generator/: FILES
api/openapi_server/: __main__.py
api/openapi_server/controllers/: allowed_ip_address_controller.py  dns_server_controller.py  (+6 more)
client/: .eslintrc.js  package-lock.json  package.json
client/src/: App.js  Button.js  ClientDetail.js  ClientList.js  ConfigurationViewer.js  DnsServerList.js  Error.js  FormInputField.js  KeypairList.js  Modal.js  Navbar.js  NewClient.js  NewDnsServer.js  NewServer.js  NewVpnNetwork.js  Searchbar.js  SelectInputField.js  ServerList.js  Table.js  VpnNetworkList.js  index.js
migrations/2021-09-26-194342_initial_setup/: down.sql  up.sql
migrations/2021-11-03-193406_rename_column_server/: up.sql
migrations/2021-11-03-194319_rename_server_table/: up.sql
server/: .eslintrc.js  Dockerfile_DB  Dockerfile_Web  config.js  db.js  docker-compose.yml  models.js  package-lock.json  package.json  server.js  setupDatabase.js  setup_db.sql  validator.js
server/graphql/: typeDefs.js
src/: lib.rs  main.rs  schema.rs
src/controllers/: allowed_ip.rs  dns_server.rs  key.rs  mod.rs  server.rs  vpn_net.rs
src/lib/: db.rs
src/models/: allowed_ip.rs  dns_server.rs  key.rs  mod.rs  server.rs  vpn_net.rs
(+27 files in other folders)
