[package]
name = "wireguard-api-rs"
version = "0.1.0"
authors = ["Maximilian Kapra <maximilian@kapra.de>"]
edition = "2018"

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
diesel = { version = "1.4.8", features = ["sqlite"] }
dotenv = "0.15.0"
rusqlite = "0.25.3"
serde = { version = "1.0", features = ["derive"] }
tide = "0.16.0"
