[package]
name = "wireguard-api-rs"
version = "0.1.0"
authors = ["Maximilian Kapra <maximilian@kapra.de>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.8", features = ["sqlite"] }
rusqlite = "0.25.3"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.70"
wireguard-control = "1.5.0"
